WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
264339
[WebGPU] Queue::commitMTLCommandBuffer will fail if command buffer was already committed
https://bugs.webkit.org/show_bug.cgi?id=264339
Summary
[WebGPU] Queue::commitMTLCommandBuffer will fail if command buffer was alread...
Mike Wyrzykowski
Reported
2023-11-07 08:54:30 PST
[WebGPU] Queue::commitMTLCommandBuffer will fail if command buffer was already committed
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2023-11-07 08:58:41 PST
radar://117851924
Mike Wyrzykowski
Comment 2
2023-11-07 09:04:13 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20105
EWS
Comment 3
2023-11-07 17:37:26 PST
Committed
270361@main
(a965533e01fa): <
https://commits.webkit.org/270361@main
> Reviewed commits have been landed. Closing PR #20105 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug