[WebGPU] Queue::commitMTLCommandBuffer will fail if command buffer was already committed https://bugs.webkit.org/show_bug.cgi?id=264339 <radar://117851924>

Reviewed by Tadeu Zagallo.

Ensure that a command buffer doesn't get submitted twice and generate
a validation error if we would attempt to do so.

* Source/WebGPU/WebGPU/CommandBuffer.h:
* Source/WebGPU/WebGPU/CommandBuffer.mm:
(WebGPU::CommandBuffer::makeInvalid):
* Source/WebGPU/WebGPU/Queue.h:
* Source/WebGPU/WebGPU/Queue.mm:
(WebGPU::Queue::validateSubmit const):
(WebGPU::Queue::commitMTLCommandBuffer):
(WebGPU::Queue::submit):
(wgpuQueueSubmit):

Canonical link: https://commits.webkit.org/270361@main